vlib/v/checker/tests/immutable_array_field_shift.out
vlib/v/checker/tests/immutable_array_field_shift.v:14:4: error: field `a` of struct `B` is immutable
   12 |         a: A{}
   13 |     }
   14 |     b.a.i << 3
      |       ^
   15 | }
